# POC-COM

./: .gitignore  LICENSE  README.md  THIRD-PARTY-LICENSES
POC-COM-source/: Cargo.toml
POC-COM-source/crates/app_gui/: Cargo.toml  build.rs
POC-COM-source/crates/app_gui/src/: app.rs  board_ui.rs  listen.rs  maidenhead.rs  mail_ui.rs  main.rs  mh_map.rs  pipeline.rs  settings.rs  theme.rs  vad.rs  waterfall.rs  wav.rs
POC-COM-source/crates/audio_io/: Cargo.toml
POC-COM-source/crates/audio_io/examples/: channel_probe.rs  list_devices.rs
POC-COM-source/crates/audio_io/src/: device.rs  error.rs  lib.rs  ptt.rs  resample.rs  rx.rs  tx.rs
POC-COM-source/crates/channel_probe/: Cargo.toml
POC-COM-source/crates/channel_probe/src/: lib.rs
POC-COM-source/crates/channel_probe_gui/: Cargo.toml
POC-COM-source/crates/channel_probe_gui/src/: main.rs  waterfall.rs
docs/: index.html  lexicon_modulation.html
