[workspace]
resolver = "2"
members = [
    "crates/lexicon_modem",
    "crates/audio_io",
    "crates/app_gui",
    "crates/channel_probe",
    "crates/channel_probe_gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
