[package]
name = "channel_probe_gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GUI wrapper for channel_probe: device dropdowns + live waterfall, for watching a real link in real time while debugging PTT/routing/levels"

[[bin]]
name = "channel_probe_gui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rustfft = "6"
audio_io = { path = "../audio_io" }
channel_probe = { path = "../channel_probe" }
